--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -153,7 +153,7 @@
                     
 
                 
-                    <!-- <button type="submit" class="btn btn-primary">Save Data</button> -->
+                    <button id="hiddensub" type="submit" class="btn btn-primary" style="display: none;">Save and Next</button>
 
                 </form>
                 <div class="row">
@@ -196,8 +196,8 @@
 <script>
 
     function submitbasicform() {
-        var form = document.getElementById('myResumeForm');
-        form.submit();
+        document.getElementById('hiddensub').click();
+
         }
 
 </script>
@@ -350,6 +350,17 @@
                 xhr.setRequestHeader('X-CSRFToken', getCookie('csrftoken'));
                 xhr.onload = function() {
                     if (xhr.status === 200) {
+                        const socialDiv = document.getElementById('socialdiv');
+                        const rows = socialDiv.querySelectorAll('.row');
+                        const rowCnt = rows.length;
+                        console.log(rowCnt);
+
+                        const addButton = document.getElementById('addsocial');
+                        if (rowCnt === 3) {
+                            addButton.style.display = 'none';
+                        } else {
+                            addButton.style.display = '';
+                        }
                     console.log('Social deleted successfully!');
                     } else {
                     console.error('An error occurred while deleting the Social:', xhr.statusText);
@@ -416,6 +427,8 @@
 
     }
     }
+
+
     var addsocial = document.getElementById('addsocial');
     addsocial.addEventListener('click', function(event) {
                 event.preventDefault();
@@ -426,6 +439,18 @@
 
                 renderSocial(mys)
                 updateSocial('POST',mys,"twitter","");
+
+                const socialDiv = document.getElementById('socialdiv');
+                const rows = socialDiv.querySelectorAll('.row');
+                const rowCnt = rows.length;
+                console.log(rowCnt);
+
+                if (rowCnt === 3) {
+                    addsocial.style.display = 'none';
+                } else {
+                    addsocial.style.display = '';
+                }
+
 
     });
 
