--- a/templates/resume-main.html
+++ b/templates/resume-main.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJXVJ9QG2Q"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZJXVJ9QG2Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-ZJXVJ9QG2Q');
-</script>
+</script> -->
     <meta charset="utf-8">
     <title>CareerCrest - {% block title %}Jobs{% endblock %}</title>
 
@@ -98,8 +98,8 @@
     <!-- Template Javascript -->
     <script src="{% static 'js/main.js'%}" ></script>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4323271819190092"
-     crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4323271819190092"
+     crossorigin="anonymous"></script> -->
 
 
 </body></html>
