--- a/resume/templates/resume/resume_summary.html
+++ b/resume/templates/resume/resume_summary.html
@@ -42,7 +42,8 @@
                                         {{ form.professional_summary }}
                                     </div>
                                 </div>
-                        <button type="submit" class="btn btn-danger">Save And Next</button>
+                        <button id="hiddensubsummary" type="submit" class="btn btn-danger" style="display: none;">Save And Next</button>
+
                     </form>
                 </div>
             </div>
@@ -54,7 +55,8 @@
 
             </div>
             <div class="col-6">
-                <a href="{% url 'finalize' tracking %}" class="btn btn-danger"> Next</a>
+                <button id="hiddennext"  onclick="submitsummaryform();" class="btn btn-danger" > Next</button>
+
             </div>
         </div>
         <!-- end button  -->
@@ -212,6 +214,24 @@
     }
 </script>
 <!-- script for summary end -->
+
+<!-- start hidden submit -->
+<script>
+
+
+        function submitsummaryform() {
+        document.getElementById('hiddensubsummary').click();
+
+        }
+
+        
+        
+
+
+</script>
+
+<!-- end hidden submit -->
+
 
 {% endblock content %}
 
