--- a/resume/templates/resume/add_edit_Interest.html
+++ b/resume/templates/resume/add_edit_Interest.html
@@ -10,7 +10,7 @@
         {{form.as_p}}
         <button type="submit"  class="btn btn-success">Save</button>
     </form>
-    <a href="{% url 'list-interest' tracking %}" class="btn btn-danger"> Cancel</a>
+    <a href="{% url 'finalize' tracking %}" class="btn btn-danger"> Cancel</a>
 </div>    
 
 {% endblock content %}
