--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -303,8 +303,7 @@
                 'socialtracking': social.socialtracking
             }));
         }
-    function renderSocial(social)
-    {
+    function renderSocial(social){
                 // Create a new row for each social object
                 const divouter = document.createElement('div');
                 divouter.setAttribute("class","row")
