--- a/resume/templates/resume/add_edit_software.html
+++ b/resume/templates/resume/add_edit_software.html
@@ -18,7 +18,7 @@
 
         <button type="submit"  class="btn btn-success">Save</button>
     </form>
-    <a href="{% url 'list-software' tracking %}" class="btn btn-danger"> Cancel</a>
+    <a href="{% url 'finalize' tracking %}" class="btn btn-danger"> Cancel</a>
 </div>    
 <script>
     document.querySelector('jsuites-rating').addEventListener('onchange', function(e) {
