--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -18,7 +18,7 @@
                     {% if image %}
                     <img src="{{ image.url }}" alt="Sample Image for Photo Upload" id="uploadimage" class="img-fluid">
                     {% else %}
-                    <img src="http://127.0.0.1:8000/media/NoImage.jpg" alt="Sample Image for Photo Upload" id="uploadimage" class="img-fluid">
+                    <img src="/media/NoImage.jpg" alt="Sample Image for Photo Upload" id="uploadimage" class="img-fluid">
                     {% endif %}
                 </div>
                   
@@ -184,7 +184,7 @@
             
             <div class="col-md-2">
                 <div class="col">
-                    <img src="http://127.0.0.1:8000/media/resume-preview.jpg" class="img-fluid" alt="Image">
+                    <img src="/media/resume-preview.jpg" class="img-fluid" alt="Image">
                 </div>
                 <button type="button" class="btn btn-primary">Change Template</button>
             </div>
