--- a/resume/templates/resume/add_edit_work.html
+++ b/resume/templates/resume/add_edit_work.html
@@ -5,27 +5,51 @@
 
 <div class="container">
 
+    <h1>Tell us about your most recent job</h1>
+    <p>We’ll start there and work backward.</p>
     <form method="post">
         {% csrf_token %}
         
         <div id="Jobdetails">
-            {{form.job_title.label_tag}}
-            {{form.job_title}}
 
-            {{form.employer.label_tag}}
-            {{form.employer}}
+            <div class="row">
+                <div class="col-sm-6">
+                    {{form.job_title.label_tag}}
+                    {{form.job_title}}
+                </div>
+                <div class="col-sm-6">
+                    {{form.employer.label_tag}}
+                    {{form.employer}}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    {{form.city.label_tag}}
+                    {{form.city}}
+                </div>
+                <div class="col-sm-6">
+                    {{form.country.label_tag}}
+                    {{form.country}}
+                </div>
 
-            {{form.city.label_tag}}
-            {{form.city}}
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    {{form.start_date.label_tag}}
+                    {{form.start_date}}
+                </div>
+                <div class="col-sm-6">
+                    {{form.end_date.label_tag}}
+                    {{form.end_date}}
+                </div>
 
-            {{form.country.label_tag}}
-            {{form.country}}
+            </div>
+            
+        
 
-            {{form.start_date.label_tag}}
-            {{form.start_date}}
 
-            {{form.end_date.label_tag}}
-            {{form.end_date}}
+
+
 
             <a onclick="displayJobInfo()" class="btn btn-primary ">NEXT</a>
             <a href="{% url 'list-work' tracking %}" class="btn btn-danger"> Cancel</a>
