--- a/resume/templates/resume/resume_Listskill.html
+++ b/resume/templates/resume/resume_Listskill.html
@@ -351,7 +351,7 @@
     
         const idl = skill.skilltracking; // Replace with the actual ID of the skill to be deleted
         const deletelinkl = document.createElement('a');
-        deletelinkl.href = `http://127.0.0.1:8000/api/delete-skill/${idl}`;
+        deletelinkl.href = `/api/delete-skill/${idl}`;
         deletelinkl.innerHTML = 'Delete skill';
         deletelinkl.addEventListener('click', function(event) {
         event.preventDefault(); // Prevent the link from navigating to the URL
